# soft_media_group

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
src/app/: main.py
src/app/core/: short_link.py
src/app/core/db/: __init__.py  crud.py  database_init.py
src/app/core/db/models/: links.py
src/app/core/schema/: shorten.py  stats.py
src/app/migrations/: env.py
src/app/migrations/versions/: 2026_03_18_1807-7017bd4bd695_.py  2026_03_18_1816-111f3458b926_.py  2026_03_18_1821-816ec789c67d_.py
src/app/routers/: shorten.py  stats.py
src/app/settings/: settings.py
src/tests/: conftest.py  test_generate_short_id.py  test_get_stats.py  test_shorten.py
