[tool.poetry]
name = "soft-media-group"
version = "0.1.0"
description = ""
authors = ["Yan <ipetrunin@webiomed.ru>"]
readme = "README.md"
packages = [{include = "soft_media_group"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standart"], version = "^0.135.1"}
sqlalchemy = "^2.0.48"
alembic = "^1.18.4"
pydantic-settings = "^2.13.1"
uvicorn = "^0.42.0"
asyncpg = "^0.31.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
